Add sidebar and appropriate layout for future UI elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,26 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary: #f8f8ff;
+  --secondary: #44362f;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+button {
+  transition: opacity 0.1s ease; /* Smooth transition */
+}
+
+button:active {
+  opacity: 0.6; /* Lower opacity on click */
 }
