--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,9 @@ button {
 button:active {
   opacity: 0.6; /* Lower opacity on click */
 }
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
